--- a/index.html
+++ b/index.html
@@ -1,47 +1,160 @@
 <!DOCTYPE html>
 <style>
-    
     body, input, button {
         font-size: 14px;
         font-family: Roboto,arial,sans-serif;
         color: #222;
     }
+    .centerpos {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .centerposdirection {
+        min-height: 150px;
+        max-height: 290px;
+        height: calc(100% - 560px);
+        margin-top: 150px;
+    }
 </style>
 
-<div class="left-nav">
+<div>
     <style>
-        .left-nav {
-        display: flex;
-        align-items: center;
-        padding: 6px;
-    }
-        a.left-links {
-            display: inline-block;
-            padding: 5px;
-            margin: 0 5px;
-            color: #222;
-        }
+         .topnav {
+             list-style-type: none;
+             margin: 0;
+             padding: 10px;
+             overflow: hidden;
+         }
     </style>
-    <a class="left-links">About</a>
-    <a class="left-links">Store</a>
-    <div class="right-nav">
+    <ul class="topnav">
         <style>
-            .right-nav {
-                display: inline-block;
+            li {
+                float: left;
+            }
+            .topnav a {
+                text-align: center;
                 padding: 6px;
+                margin: 0 5px;
+                text-decoration: none;
+                color: #222;
+            }
+            .topnav a:hover {
+                text-decoration: underline;
+                color: #222;
             }
         </style>
-        <a class="right-nav">Gmail</a>
-        <a class="right-nav">Images</a>
-    </div>
+        <li><a href="https://about.google/?fg=1&utm_source=google-US&utm_medium=referral&utm_campaign=hp-header">About</a></li>
+        <li><a href="https://store.google.com/US/?utm_source=hp_header&utm_medium=google_ooo&utm_campaign=GS100042&hl=en-US">Store</a></li>
+        <li style="float:right"><a href="https://www.google.com/imghp?hl=en&ogbl">Images</a></li>
+        <li style="float:right"><a href="https://accounts.google.com/signin/v2/identifier?service=mail&passive=true&rm=false&continue=https%3A%2F%2Fmail.google.com%2Fmail%2F%26ogbl%2F&ss=1&scc=1&ltmpl=default&ltmplcache=2&emr=1&osid=1&flowName=GlifWebSignIn&flowEntry=ServiceLogin">Gmail</a></li>
+    </ul>
 </div>
-<div>
+<div class="centerpos centerposdirection">
+    <style>
+        img {
+            position: relative;
+        }
+    </style>
     <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png">
 </div>
 <div>
+    <style>
+        .searchbar {
+            background: #fff;
+            display: flex;
+            border: 1px solid #dfe1e5;
+            box-shadow: none;
+            border-radius: 24px;
+            z-index: 3;
+            width: 584px;
+            height: 44px;
+            margin: 0 auto;
+            margin-top: -20px;
+        }
+        .searchbar:hover {
+            box-shadow: 0 1px 6px rgb(32 33 36 / 28%);
+            border-color: rgba(223,225,229,0);
+        }
+        .searchbar:focus {
+            outline: none;
+        }
+    </style>
     <input class="searchbar"></input>
 </div>
 <div>
-    <button>Google Search</button>
-    <button>I'm Feeling Lucky</button>
+    <style>
+        center {
+            display: block;
+            margin-top: 20px;
+        }
+        .searchbarbuttons {
+            background-color: #f8f9fa;
+            border: 1px solid #f8f9fa;
+            border-radius: 4px;
+            margin: 11px 4px;
+            padding: 0 16px;
+            line-height: 27px;
+            height: 36px;
+            min-width: 54px;
+            text-align: center;
+            cursor: pointer;
+            user-select: none;
+            color: #3c4043;
+        }
+        button:hover {
+            box-shadow: 0 1px 1px rgb(0 0 0 / 10%);
+            background-color: #f8f9fa;
+            border: 1px solid #dadce0;
+            color: #202124
+        }
+    </style>
+    <center> 
+        <button class="searchbarbuttons">Google Search</button>
+        <button class="searchbarbuttons">I'm Feeling Lucky</button>
+    </center>
+</div>
+<div>
+    <style>
+        .bottomnav {
+            list-style-type: none;
+            margin: 0%;
+            padding: 15px;
+            overflow: hidden; /*Not sure what this does...*/
+            position: fixed;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            background-color: #f2f2f2;
+        }
+        li {
+            float: left;
+        }
+        .bottomnav a {
+            text-align: center;
+            padding: 0px 20px;
+            text-decoration: none;
+            color: #70757a;;
+        }
+        .bottomnav a:hover{
+            text-decoration: underline;
+            cursor: pointer;
+        }
+    </style>
+    <ul class="bottomnav">
+        <li><a href="https://ads.google.com/intl/en_us/home/?subid=ww-ww-et-g-awa-a-g_hpafoot1_1!o2m--ahpm-0000000078-0000000000&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpafooter&fg=1#!/">Advertising</a></li>
+        <li><a href="https://smallbusiness.withgoogle.com/?subid=us-en-et-g-awa-a-g_hpbfoot1_1!o2&utm_source=google&utm_medium=ep&utm_campaign=google_hpbfooter&utm_content=google_hpbfooter&gmbsrc=us-en_US-et-gs-z-gmb-s-z-u~sb-g4sb_srvcs-u#!/">Business</a></li>
+        <li><a href="https://www.google.com/search/howsearchworks/?fg=1">How Search works</a></li>
+        <div>
+            <style>
+                .bottomrightnav {
+                    float: right;
+                    margin-right: 20px
+                }
+            </style>
+            <li class="bottomrightnav"><a>Settings</a></li>
+            <li class="bottomrightnav"><a href="https://policies.google.com/terms?hl=en&fg=1">Terms</a></li>
+            <li class="bottomrightnav"><a href="https://policies.google.com/privacy?hl=en&fg=1">Privacy</a></li>
+        </div>
+    </ul>
 </div>
