--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             list-style-type: none;
             margin: 0%;
             padding: 15px;
-            overflow: hidden; /*Not sure what this does...*/
+            overflow: hidden;
             position: fixed;
             bottom: 0;
             left: 0;
